EKS/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: default
spec:
    replicas: 3
    selector:
      matchLabels:
        app: demo-frontend
    template:
      metadata:
        labels:
          app: demo-frontend
      spec:
        containers:
          - name: demo-frontend
            image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/demo-frontend:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 80
