EKS/frontend-service.yaml
#frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
spec:
  type: NodePort
  selector:
    app: demo-frontend
    tier: front
  ports:
    - port: 80
      nodePort: 30000
