EKS/service.yaml
#frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clover-stock
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: clover-stock
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
